# bitchat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  bitchat.toml  flake.nix  justfile  run-kotlin-test.sh
crates/bitchat-ble/: Cargo.toml
crates/bitchat-ble-transport/: Cargo.toml
crates/bitchat-ble-transport/src/: lib.rs
crates/bitchat-ble/src/: advertising.rs  config.rs  connection.rs  discovery.rs  error.rs  lib.rs  peer.rs  protocol.rs  transport.rs
crates/bitchat-ble/src/advertising/: fallback.rs  linux.rs  macos.rs  manager.rs  mod.rs
crates/bitchat-cli/: Cargo.toml
crates/bitchat-cli/src/: app.rs  app_orchestrator.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  main.rs.backup  state.rs  terminal_interface.rs  tui.rs
crates/bitchat-cli/src/tui/: app.rs  manager.rs  mod.rs  render.rs  types.rs
crates/bitchat-core/: Cargo.toml
crates/bitchat-core/examples/: capability_negotiation.rs
crates/bitchat-core/src/: config.rs  crypto.rs  delivery.rs  errors.rs  fragmentation.rs  geohash.rs  handlers.rs  lib.rs  monitoring.rs  packet.rs  rate_limiter.rs  session.rs  task_logging.rs  transport.rs  transport_task.rs  types.rs  verification.rs
crates/bitchat-core/src/channel/: communication.rs  mod.rs  utils.rs
crates/bitchat-core/src/identity/: cache.rs  crypto.rs  ephemeral.rs  manager.rs  mod.rs  social.rs  storage.rs  types.rs
crates/bitchat-core/src/protocol/: acknowledgments.rs  announce.rs  capabilities.rs  connection_state.rs  crypto.rs  deduplication.rs  delivery.rs  file_transfer.rs  fragmentation.rs  group_messaging.rs  message.rs  message_store.rs  mod.rs  packet.rs  session.rs  session_sync.rs  tlv.rs  wire.rs
crates/bitchat-core/src/transport/: advanced_failover.rs  failover.rs  integration.rs  mod.rs
crates/bitchat-core/tests/: canonical_compatibility.rs  cleanup_tests.rs  deterministic_tests.rs  integration_tests.rs  message_store_property_tests.proptest-regressions  message_store_property_tests.rs  pure_function_tests.rs  test_utils.rs
crates/bitchat-harness/: Cargo.toml
crates/bitchat-harness/src/: channels.rs  lib.rs  messages.rs  mock_transport.rs  test_harness.rs  transport.rs
crates/bitchat-nostr/: Cargo.toml
crates/bitchat-nostr/src/: config.rs  embedding.rs  error.rs  integration_tests.rs  lib.rs  message.rs  nip17.rs  relay_manager.rs  transport.rs
crates/bitchat-nostr/tests/: nostr_tests.rs
crates/bitchat-runtime/: Cargo.toml
crates/bitchat-runtime/src/: builder.rs  lib.rs  rate_limiter.rs  runtime.rs  supervisor.rs  tasks.rs
crates/bitchat-runtime/src/logic/: handlers.rs  mod.rs  state.rs  task.rs
crates/bitchat-runtime/src/managers/: connection.rs  delivery.rs  mod.rs  session.rs
crates/bitchat-runtime/tests/: integration_decomposed_runtime.rs  integration_tests_csp.rs  stress_tests.rs
crates/bitchat-web/: Cargo.toml
crates/bitchat-web/src/: app.rs  client.rs  lib.rs  transport.rs  utils.rs
docs/: browser-p2p-architecture.md  crate-dependency-diagram.md  deepwiki-mcp-guide.md  feature-roadmap.md  hybrid-architecture-proposal.md  implementation-completeness-analysis.md  library-features-roadmap.md  phase4-implementation-summary.md  phased-implementation-plan.md  protocol-architecture.md  runtime-architecture-rfc.md  rust-library-recommendations.md  simulation-system-evolution.md  simulation-system.md  simulator-architecture.md  simulator-refactoring-plan.md
simulator/: Justfile  README.md  TEST_MATRIX.md  wasm-runner.js
simulator/device/: .gitignore  Cargo.toml  Justfile  README.md
simulator/emulator-rig/: .gitignore  Cargo.toml  README.md  flake.nix
simulator/emulator-rig/src/: appium.rs  config.rs  emulator.rs  lib.rs  main.rs  network.rs  orchestrator.rs
simulator/ios-linker-workaround/: Cargo.toml  REVERT_INSTRUCTIONS.md  XCODE26_TOR_FIX.md  build-ios.sh
simulator/ios-linker-workaround/src/: lib.rs
simulator/scenario-runner/: Cargo.toml  flake.nix
simulator/scenario-runner/src/: client_bridge.rs  cross_framework_orchestrator.rs  event_orchestrator.rs  lib.rs  main.rs  main_old.rs  network_analysis.rs  network_router.rs  scenario_runner.rs
simulator/scenario-runner/src/scenarios/: all_client_types.rs  byzantine_fault.rs  byzantine_validation.rs  cross_implementation_test.rs  deterministic_messaging.rs  ios_simulator_test.rs  mod.rs  security_conformance.rs  session_management.rs  session_rekey.rs  transport_commands_test.rs  transport_failover.rs
simulator/scenarios/: 01_discovery_basic.toml  02_messaging_basic.toml  03_integration_comprehensive.toml  04_network_mesh_partition.toml  06_discovery_scaling.toml  07_reliability_unreliable_network.toml  09_platform_android_to_android.toml  README.md  announce_packet_test.toml  announce_simple_test.toml  byzantine_fault.rs  deterministic_runner.rs  mesh_network.toml  (+9 more)
simulator/shared/: Cargo.toml
simulator/shared/src/: client_bridge.rs  lib.rs  scenario_executor.rs  types.rs
simulator/test_runner/: Cargo.toml  flake.nix
simulator/test_runner/src/: event_orchestrator.rs  main.rs  orchestrator.rs  runtime_orchestrator.rs
simulator/test_runner/src/scenarios/: basic_send_receive.rs  cross_client_test.rs  handshake_test.rs  mod.rs
simulator/virtual/: Cargo.toml  Justfile  README.md  build.rs
simulator/virtual/harness/: Cargo.toml
simulator/virtual/harness/examples/: basic_usage.rs
simulator/virtual/harness/src/: lib.rs  messages.rs
simulator/virtual/src/: clock.rs  lib.rs  main.rs  network_analysis.rs  network_router.rs  random.rs  scenario_config.rs  scenario_executor.rs  simulation_executor.rs
simulator/virtual/src/scenarios/: announce_validation.rs  geohash_identity.rs  message_fragmentation.rs  mod.rs  noise_encrypted_payloads.rs  noise_handshake_faults.rs  nostr_nip17.rs  rekey_trigger_conditions.rs  session_cleanup.rs  session_state_machine.rs  wire_format_canonical.rs
specs/: GENERATION_SUMMARY.md  README.md  message_types.ron  noise_xx.ron  session_lifecycle.ron  wire_format.ron
tests/: canonical_compatibility.rs  test_canonical_compatibility.rs  transport_integration.rs
web/: README.md  index.html
(+18 files in other folders)
