[workspace]
resolver = "2"
members = [
    "crates/bitchat-core",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptography (WASM-compatible)
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
curve25519-dalek = { version = "4.0", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek = { version = "2.0", default-features = false, features = ["alloc", "zeroize"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["zeroize"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "1.0"

# WASM support
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", default-features = false }