[package]
name = "bitchat-ble"
version = "0.1.0"
edition = "2021"
description = "Bluetooth Low Energy transport implementation for BitChat protocol"
license = "MIT OR Apache-2.0"

[dependencies]
# Core BitChat protocol
bitchat-core = { path = "../bitchat-core" }

# BLE dependencies
btleplug = { workspace = true }

# Platform-specific BLE advertising support
[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-bluetooth = "0.1"
objc = "0.2"
cocoa = "0.25"
objc-foundation = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Devices_Bluetooth",
    "Win32_Foundation", 
    "Win32_System_Com",
    "Storage_Streams",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
async-trait = "0.1"
smallvec = { workspace = true }

# Logging
tracing = "0.1"

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"