[package]
name = "bitchat-ble"
version = "0.1.0"
edition = "2021"
description = "Bluetooth Low Energy transport implementation for BitChat protocol"
license = "MIT OR Apache-2.0"

[dependencies]
# Core BitChat protocol
bitchat-core = { path = "../bitchat-core" }
bitchat-harness = { path = "../bitchat-harness" }

# BLE dependencies
btleplug = { workspace = true }

# Platform-specific BLE advertising support
[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }

[target.'cfg(target_os = "macos")'.dependencies]
core_bluetooth = "0.1"
objc = "0.2"
cocoa = "0.25"
objc-foundation = "0.1"


# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
async-trait = "0.1"
smallvec = { workspace = true }
hashbrown = { workspace = true }
cfg-if = "1.0"

# Logging
tracing = "0.1"

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
