[package]
name = "bitchat-cli"
version = "0.1.0"
edition = "2021"
description = "BitChat command-line client with automation mode"

[[bin]]
name = "bitchat-cli"
path = "src/main.rs"

[dependencies]
bitchat-core = { path = "../bitchat-core" }
bitchat-runtime = { path = "../bitchat-runtime" }
bitchat-ble = { path = "../bitchat-ble" }
bitchat-nostr = { path = "../bitchat-nostr" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tracing = "0.1"