[package]
name = "bitchat-harness"
version = "0.1.0"
edition = "2021"
description = "Shared BitChat runtime harness (channel schema, transport lifecycle, utilities)"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["bitchat-core/std"]
wasm = ["bitchat-core/wasm"]

[dependencies]
bitchat-core = { path = "../bitchat-core" }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
