[package]
name = "bitchat-harness"
version = "0.1.0"
edition = "2021"
description = "Shared BitChat runtime harness (channel schema, transport lifecycle, utilities)"
license = "MIT OR Apache-2.0"

[features]
# Three mutually exclusive features aligned with bitchat-core
default = ["std"]
std = ["bitchat-core/std"]
wasm = ["bitchat-core/wasm"]
testing = ["bitchat-core/testing", "async-trait", "tokio", "fastrand", "tracing"]

[dependencies]
bitchat-core = { path = "../bitchat-core", default-features = false, features = ["std"] }
# bitchat-runtime dependency removed to avoid circular dependency
sha2 = { workspace = true }
serde = { workspace = true }

# Testing dependencies
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
fastrand = { version = "2.0", optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_usage"
required-features = ["testing"]
