[package]
name = "bitchat-nostr"
version = "0.1.0"
edition = "2021"
description = "Nostr transport implementation for BitChat protocol"
license = "MIT OR Apache-2.0"

[dependencies]
# Core BitChat protocol
bitchat-core = { path = "../bitchat-core" }

# Nostr dependencies
nostr-sdk = { workspace = true }
tokio-tungstenite = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
bincode = { workspace = true }

# Logging
tracing = { workspace = true }

# URL parsing
url = "2.0"

[dev-dependencies]
tokio-test = "0.4"