[package]
name = "bitchat-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for BitChat protocol with Nostr transport"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core BitChat protocol  
bitchat-core = { path = "../bitchat-core" }

# WASM and JS bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
  "Blob",
  "FileReader",
  "Event",
  "EventTarget",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }

# Nostr for WASM
nostr-sdk = { workspace = true, default-features = false, features = ["nip04", "nip44"] }

# Async runtime for WASM
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["time"] }
async-trait = { workspace = true }
smallvec = { workspace = true }

# Utilities
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
bincode = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
thiserror = { workspace = true }

# Logging for WASM
tracing = { workspace = true }
tracing-wasm = "0.2"

# URL parsing
url = "2.5"

# Base64 encoding
base64 = "0.22"

# Debug helpers
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"