[package]
name = "bitchat-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for BitChat protocol with Nostr transport"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
# Default is no features - WASM-only
default = []

# Std feature for workspace builds (not used for actual WASM)
std = ["bitchat-core/std"]

# Experimental features for advanced functionality
experimental = ["bitchat-core/experimental"]

[dependencies]
# Core BitChat protocol - headless and platform-agnostic  
bitchat-core = { path = "../bitchat-core", default-features = false, features = ["wasm", "flate2"] }
cfg-if = "1.0"

# Nostr transport for WebAssembly (temporarily disabled for WASM compilation)
# bitchat-nostr = { path = "../bitchat-nostr", default-features = false, features = ["wasm"] }

# WASM and JS bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs (minimal set needed)
web-sys = { version = "0.3", features = [
  "console",
  "Window",
] }

# Utilities
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
hex = { workspace = true }
futures = { workspace = true }

# Logging for WASM
tracing = { workspace = true }
tracing-wasm = "0.2"

# Debug helpers
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"