# TEMPORARY: Xcode 16+ linker workaround for C libraries
# This crate provides secp256k1 via Rust FFI to bypass the Xcode 16 partial linking bug
# DELETE THIS ENTIRE CRATE when Xcode is fixed

[package]
name = "ios-linker-workaround"
version = "0.1.0"
edition = "2021"

[lib]
name = "ios_linker_workaround"
crate-type = ["staticlib"]  # Build as static library for iOS

[dependencies]
# Pure Rust secp256k1 implementation
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
