[package]
name = "bitchat-scenario-runner"
version = "0.1.0"
edition = "2021"
description = "Event-driven scenario runner for BitChat cross-client compatibility testing"
license = "MIT OR Apache-2.0"

# Empty workspace table to prevent being part of parent workspace
[workspace]

[[bin]]
name = "bitchat-scenario-runner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling and utilities
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# JSON handling for parsing client outputs
serde_json = "1.0"