# Shared abstractions for BitChat simulator testing framework
[package]
name = "bitchat-simulator-shared"
version = "0.1.0"
edition = "2021"
description = "Common abstractions for scenario-runner and emulator-rig"

# Empty workspace table to prevent being part of parent workspace
[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

