[package]
name = "bitchat-test-runner"
version = "0.1.0"
edition = "2021"
description = "Integration test runner for BitChat cross-client compatibility"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bitchat-test-runner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling and utilities
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# JSON handling for parsing client outputs
serde_json = "1.0"

# BitChat crates for in-memory runtime testing
bitchat-core = { path = "../../crates/bitchat-core" }
bitchat-runtime = { path = "../../crates/bitchat-runtime" }
bitchat-ble = { path = "../../crates/bitchat-ble" }
bitchat-nostr = { path = "../../crates/bitchat-nostr" }