[package]
name = "bitchat-harness"
version = "0.1.0"
edition = "2021"
description = "Shared BitChat runtime harness (channel schema, transport lifecycle, utilities)"
license = "MIT OR Apache-2.0"

[features]
# Three mutually exclusive features aligned with bitchat-core
default = ["std"]
std = ["bitchat-core/std"]
wasm = ["bitchat-core/wasm"]
testing = ["bitchat-core/testing", "async-trait", "tokio", "fastrand", "tracing"]

[dependencies]
bitchat-core = { path = "../../../crates/bitchat-core", default-features = false, features = ["std"] }
# bitchat-runtime dependency removed to avoid circular dependency
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

# Testing dependencies
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
fastrand = { version = "2.0", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "*" }

[[example]]
name = "basic_usage"
required-features = ["testing"]
